@@ -62,7 +62,7 @@ public class XmlUtils {
         }
     }
 
-    public static final int
+    public static int
     convertValueToList(CharSequence value, String[] options, int defaultValue) {
         if (null != value) {
             for (int i = 0; i < options.length; i++) {
@@ -74,7 +74,7 @@ public class XmlUtils {
         return defaultValue;
     }
 
-    public static final boolean
+    public static boolean
     convertValueToBoolean(CharSequence value, boolean defaultValue) {
         boolean result = false;
 
@@ -89,7 +89,7 @@ public class XmlUtils {
         return result;
     }
 
-    public static final int
+    public static int
     convertValueToInt(CharSequence charSeq, int defaultValue) {
         if (null == charSeq)
             return defaultValue;
@@ -181,7 +181,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readMapXml
      */
-    public static final void writeMapXml(Map val, OutputStream out)
+    public static void writeMapXml(Map val, OutputStream out)
             throws XmlPullParserException, java.io.IOException {
         XmlSerializer serializer = new FastXmlSerializer();
         serializer.setOutput(out, StandardCharsets.UTF_8.name());
@@ -202,7 +202,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readListXml
      */
-    public static final void writeListXml(List val, OutputStream out)
+    public static void writeListXml(List val, OutputStream out)
             throws XmlPullParserException, java.io.IOException {
         XmlSerializer serializer = Xml.newSerializer();
         serializer.setOutput(out, StandardCharsets.UTF_8.name());
@@ -225,7 +225,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readMapXml
      */
-    public static final void writeMapXml(Map val, String name, XmlSerializer out)
+    public static void writeMapXml(Map val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
         writeMapXml(val, name, out, null);
     }
@@ -245,7 +245,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readMapXml
      */
-    public static final void writeMapXml(Map val, String name, XmlSerializer out,
+    public static void writeMapXml(Map val, String name, XmlSerializer out,
                                          WriteMapCallback callback) throws XmlPullParserException, java.io.IOException {
 
         if (val == null) {
@@ -277,7 +277,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readMapXml
      */
-    public static final void writeMapXml(Map val, XmlSerializer out,
+    public static void writeMapXml(Map val, XmlSerializer out,
                                          WriteMapCallback callback) throws XmlPullParserException, java.io.IOException {
         if (val == null) {
             return;
@@ -305,7 +305,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readListXml
      */
-    public static final void writeListXml(List val, String name, XmlSerializer out)
+    public static void writeListXml(List val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
         if (val == null) {
             out.startTag(null, "null");
@@ -328,7 +328,7 @@ public class XmlUtils {
         out.endTag(null, "list");
     }
 
-    public static final void writeSetXml(Set val, String name, XmlSerializer out)
+    public static void writeSetXml(Set val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
         if (val == null) {
             out.startTag(null, "null");
@@ -359,7 +359,7 @@ public class XmlUtils {
      * @see #writeMapXml
      * @see #writeValueXml
      */
-    public static final void writeByteArrayXml(byte[] val, String name,
+    public static void writeByteArrayXml(byte[] val, String name,
                                                XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
 
@@ -403,7 +403,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readThisIntArrayXml
      */
-    public static final void writeIntArrayXml(int[] val, String name,
+    public static void writeIntArrayXml(int[] val, String name,
                                               XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
 
@@ -442,7 +442,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readThisIntArrayXml
      */
-    public static final void writeLongArrayXml(long[] val, String name, XmlSerializer out)
+    public static void writeLongArrayXml(long[] val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
 
         if (val == null) {
@@ -480,7 +480,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readThisIntArrayXml
      */
-    public static final void writeDoubleArrayXml(double[] val, String name, XmlSerializer out)
+    public static void writeDoubleArrayXml(double[] val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
 
         if (val == null) {
@@ -518,7 +518,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readThisIntArrayXml
      */
-    public static final void writeStringArrayXml(String[] val, String name, XmlSerializer out)
+    public static void writeStringArrayXml(String[] val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
 
         if (val == null) {
@@ -556,7 +556,7 @@ public class XmlUtils {
      * @see #writeValueXml
      * @see #readThisIntArrayXml
      */
-    public static final void writeBooleanArrayXml(boolean[] val, String name, XmlSerializer out)
+    public static void writeBooleanArrayXml(boolean[] val, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
 
         if (val == null) {
@@ -597,7 +597,7 @@ public class XmlUtils {
      * @see #writeListXml
      * @see #readValueXml
      */
-    public static final void writeValueXml(Object v, String name, XmlSerializer out)
+    public static void writeValueXml(Object v, String name, XmlSerializer out)
             throws XmlPullParserException, java.io.IOException {
         writeValueXml(v, name, out, null);
     }
@@ -618,7 +618,7 @@ public class XmlUtils {
      * @see #writeListXml
      * @see #readValueXml
      */
-    private static final void writeValueXml(Object v, String name, XmlSerializer out,
+    private static void writeValueXml(Object v, String name, XmlSerializer out,
                                             WriteMapCallback callback) throws XmlPullParserException, java.io.IOException {
         String typeStr;
         if (v == null) {
@@ -711,7 +711,7 @@ public class XmlUtils {
      * #see #writeMapXml
      */
     @SuppressWarnings("unchecked")
-    public static final HashMap<String, ?> readMapXml(InputStream in)
+    public static HashMap<String, ?> readMapXml(InputStream in)
             throws XmlPullParserException, java.io.IOException {
         XmlPullParser parser = Xml.newPullParser();
         parser.setInput(in, StandardCharsets.UTF_8.name());
@@ -729,7 +729,7 @@ public class XmlUtils {
      * @see #readThisListXml
      * @see #writeListXml
      */
-    public static final ArrayList readListXml(InputStream in)
+    public static ArrayList readListXml(InputStream in)
             throws XmlPullParserException, java.io.IOException {
         XmlPullParser parser = Xml.newPullParser();
         parser.setInput(in, StandardCharsets.UTF_8.name());
@@ -749,7 +749,7 @@ public class XmlUtils {
      * @see #readThisSetXml
      * @see #writeSetXml
      */
-    public static final HashSet readSetXml(InputStream in)
+    public static HashSet readSetXml(InputStream in)
             throws XmlPullParserException, java.io.IOException {
         XmlPullParser parser = Xml.newPullParser();
         parser.setInput(in, null);
@@ -768,7 +768,7 @@ public class XmlUtils {
      * @return HashMap The newly generated map.
      * @see #readMapXml
      */
-    public static final HashMap<String, ?> readThisMapXml(XmlPullParser parser, String endTag,
+    public static HashMap<String, ?> readThisMapXml(XmlPullParser parser, String endTag,
                                                           String[] name) throws XmlPullParserException, java.io.IOException {
         return readThisMapXml(parser, endTag, name, null);
     }
@@ -786,7 +786,7 @@ public class XmlUtils {
      * @hide
      * @see #readMapXml
      */
-    public static final HashMap<String, ?> readThisMapXml(XmlPullParser parser, String endTag,
+    public static HashMap<String, ?> readThisMapXml(XmlPullParser parser, String endTag,
                                                           String[] name, ReadMapCallback callback)
             throws XmlPullParserException, java.io.IOException {
         HashMap<String, Object> map = new HashMap<String, Object>();
@@ -815,7 +815,7 @@ public class XmlUtils {
      *
      * @hide
      */
-    public static final ArrayMap<String, ?> readThisArrayMapXml(XmlPullParser parser, String endTag,
+    public static ArrayMap<String, ?> readThisArrayMapXml(XmlPullParser parser, String endTag,
                                                                 String[] name, ReadMapCallback callback)
             throws XmlPullParserException, java.io.IOException {
         ArrayMap<String, Object> map = new ArrayMap<>();
@@ -851,7 +851,7 @@ public class XmlUtils {
      * @return HashMap The newly generated list.
      * @see #readListXml
      */
-    public static final ArrayList readThisListXml(XmlPullParser parser, String endTag,
+    public static ArrayList<Object> readThisListXml(XmlPullParser parser, String endTag,
                                                   String[] name) throws XmlPullParserException, java.io.IOException {
         return readThisListXml(parser, endTag, name, null, false);
     }
@@ -868,10 +868,10 @@ public class XmlUtils {
      * @return HashMap The newly generated list.
      * @see #readListXml
      */
-    private static final ArrayList readThisListXml(XmlPullParser parser, String endTag,
+    private static ArrayList<Object> readThisListXml(XmlPullParser parser, String endTag,
                                                    String[] name, ReadMapCallback callback, boolean arrayMap)
             throws XmlPullParserException, java.io.IOException {
-        ArrayList list = new ArrayList();
+        ArrayList<Object> list = new ArrayList<>();
 
         int eventType = parser.getEventType();
         do {
@@ -907,7 +907,7 @@ public class XmlUtils {
      * @throws java.io.IOException
      * @see #readSetXml
      */
-    public static final HashSet readThisSetXml(XmlPullParser parser, String endTag, String[] name)
+    public static HashSet<Object> readThisSetXml(XmlPullParser parser, String endTag, String[] name)
             throws XmlPullParserException, java.io.IOException {
         return readThisSetXml(parser, endTag, name, null, false);
     }
@@ -927,10 +927,10 @@ public class XmlUtils {
      * @hide
      * @see #readSetXml
      */
-    private static final HashSet readThisSetXml(XmlPullParser parser, String endTag, String[] name,
+    private static HashSet<Object> readThisSetXml(XmlPullParser parser, String endTag, String[] name,
                                                 ReadMapCallback callback, boolean arrayMap)
             throws XmlPullParserException, java.io.IOException {
-        HashSet set = new HashSet();
+        HashSet<Object> set = new HashSet<>();
 
         int eventType = parser.getEventType();
         do {
@@ -964,7 +964,7 @@ public class XmlUtils {
      * @return Returns a newly generated byte[].
      * @see #writeByteArrayXml
      */
-    public static final byte[] readThisByteArrayXml(XmlPullParser parser,
+    public static byte[] readThisByteArrayXml(XmlPullParser parser,
                                                     String endTag, String[] name)
             throws XmlPullParserException, java.io.IOException {
 
@@ -1029,7 +1029,7 @@ public class XmlUtils {
      * @return Returns a newly generated int[].
      * @see #readListXml
      */
-    public static final int[] readThisIntArrayXml(XmlPullParser parser,
+    public static int[] readThisIntArrayXml(XmlPullParser parser,
                                                   String endTag, String[] name)
             throws XmlPullParserException, java.io.IOException {
 
@@ -1096,7 +1096,7 @@ public class XmlUtils {
      * @return Returns a newly generated long[].
      * @see #readListXml
      */
-    public static final long[] readThisLongArrayXml(XmlPullParser parser,
+    public static long[] readThisLongArrayXml(XmlPullParser parser,
                                                     String endTag, String[] name)
             throws XmlPullParserException, java.io.IOException {
 
@@ -1155,7 +1155,7 @@ public class XmlUtils {
      * @return Returns a newly generated double[].
      * @see #readListXml
      */
-    public static final double[] readThisDoubleArrayXml(XmlPullParser parser, String endTag,
+    public static double[] readThisDoubleArrayXml(XmlPullParser parser, String endTag,
                                                         String[] name) throws XmlPullParserException, java.io.IOException {
 
         int num;
@@ -1213,7 +1213,7 @@ public class XmlUtils {
      * @return Returns a newly generated String[].
      * @see #readListXml
      */
-    public static final String[] readThisStringArrayXml(XmlPullParser parser, String endTag,
+    public static String[] readThisStringArrayXml(XmlPullParser parser, String endTag,
                                                         String[] name) throws XmlPullParserException, java.io.IOException {
 
         int num;
@@ -1271,7 +1271,7 @@ public class XmlUtils {
      * @return Returns a newly generated boolean[].
      * @see #readListXml
      */
-    public static final boolean[] readThisBooleanArrayXml(XmlPullParser parser, String endTag,
+    public static boolean[] readThisBooleanArrayXml(XmlPullParser parser, String endTag,
                                                           String[] name) throws XmlPullParserException, java.io.IOException {
 
         int num;
@@ -1331,7 +1331,7 @@ public class XmlUtils {
      * @see #readListXml
      * @see #writeValueXml
      */
-    public static final Object readValueXml(XmlPullParser parser, String[] name)
+    public static Object readValueXml(XmlPullParser parser, String[] name)
             throws XmlPullParserException, java.io.IOException {
         int eventType = parser.getEventType();
         do {
@@ -1351,7 +1351,7 @@ public class XmlUtils {
                 "Unexpected end of document");
     }
 
-    private static final Object readThisValueXml(XmlPullParser parser, String[] name,
+    private static Object readThisValueXml(XmlPullParser parser, String[] name,
                                                  ReadMapCallback callback, boolean arrayMap)
             throws XmlPullParserException, java.io.IOException {
         final String valueName = parser.getAttributeValue(null, "name");
@@ -1467,21 +1467,22 @@ public class XmlUtils {
                 "Unexpected end of document in <" + tagName + ">");
     }
 
-    private static final Object readThisPrimitiveValueXml(XmlPullParser parser, String tagName)
+    private static Object readThisPrimitiveValueXml(XmlPullParser parser, String tagName)
             throws XmlPullParserException, java.io.IOException {
         try {
-            if (tagName.equals("int")) {
-                return Integer.parseInt(parser.getAttributeValue(null, "value"));
-            } else if (tagName.equals("long")) {
-                return Long.valueOf(parser.getAttributeValue(null, "value"));
-            } else if (tagName.equals("float")) {
-                return new Float(parser.getAttributeValue(null, "value"));
-            } else if (tagName.equals("double")) {
-                return new Double(parser.getAttributeValue(null, "value"));
-            } else if (tagName.equals("boolean")) {
-                return Boolean.valueOf(parser.getAttributeValue(null, "value"));
-            } else {
-                return null;
+            switch (tagName) {
+                case "int":
+                    return Integer.parseInt(parser.getAttributeValue(null, "value"));
+                case "long":
+                    return Long.valueOf(parser.getAttributeValue(null, "value"));
+                case "float":
+                    return Float.valueOf(parser.getAttributeValue(null, "value"));
+                case "double":
+                    return Double.valueOf(parser.getAttributeValue(null, "value"));
+                case "boolean":
+                    return Boolean.valueOf(parser.getAttributeValue(null, "value"));
+                default:
+                    return null;
             }
         } catch (NullPointerException e) {
             throw new XmlPullParserException("Need value attribute in <" + tagName + ">");
@@ -1491,7 +1492,7 @@ public class XmlUtils {
         }
     }
 
-    public static final void beginDocument(XmlPullParser parser, String firstElementName) throws XmlPullParserException, IOException {
+    public static void beginDocument(XmlPullParser parser, String firstElementName) throws XmlPullParserException, IOException {
         int type;
         while ((type = parser.next()) != parser.START_TAG
                 && type != parser.END_DOCUMENT) {
@@ -1507,7 +1508,7 @@ public class XmlUtils {
         }
     }
 
-    public static final void nextElement(XmlPullParser parser) throws XmlPullParserException, IOException {
+    public static void nextElement(XmlPullParser parser) throws XmlPullParserException, IOException {
         int type;
         while ((type = parser.next()) != parser.START_TAG
                 && type != parser.END_DOCUMENT) {
